[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-grade-classifier"
version = "0.0.1"
description = "ML pipeline for grade classification"
authors = [
    { name="sam", email="samuel.duran.en@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "catboost",
    "xgboost",
    "dill"
]

[tool.setuptools.packages.find]
where = ["."]